RESOLVED FIXED122932
[GStreamer] Too many arguments for format in WebKitWebAudioSourceGStreamer.cpp
https://bugs.webkit.org/show_bug.cgi?id=122932
Summary [GStreamer] Too many arguments for format in WebKitWebAudioSourceGStreamer.cpp
Brendan Long
Reported 2013-10-16 18:08:12 PDT
From the build output: CXX Source/WebCore/platform/graphics/gstreamer/libWebCoreGtk_la-MediaPlayerPrivateGStreamer.lo ../../Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp: In function 'void webKitWebAudioSrcLoop(WebKitWebAudioSrc*)': ../../Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:392:470: warning: too many arguments for format [-Wformat-extra-args] GST_ELEMENT_ERROR(src, CORE, PAD, ("Internal WebAudioSrc error"), ("Failed to push buffer on %s", GST_DEBUG_PAD_NAME(pad))); Looking at the documentation for GST_DEBUG_PAD_NAME: > Evaluates to 2 strings, that describe the pad. Often used in debugging statements. http://gstreamer.freedesktop.org/data/doc/gstreamer/head/gstreamer/html/gstreamer-GstInfo.html#GST-DEBUG-PAD-NAME:CAPS The documentation is the same in GStreamer 0.10 also: https://developer.gnome.org/gstreamer/0.10/gstreamer-GstInfo.html#GST-DEBUG-PAD-NAME:CAPS
Attachments
Patch (1.74 KB, patch)
2013-10-16 18:10 PDT, Brendan Long
no flags
Brendan Long
Comment 1 2013-10-16 18:10:58 PDT
WebKit Commit Bot
Comment 2 2013-10-17 00:20:24 PDT
Comment on attachment 214411 [details] Patch Clearing flags on attachment: 214411 Committed r157560: <http://trac.webkit.org/changeset/157560>
WebKit Commit Bot
Comment 3 2013-10-17 00:20:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.