[GStreamer] Too many arguments for format in WebKitWebAudioSourceGStreamer.cpp https://bugs.webkit.org/show_bug.cgi?id=122932

Patch by Brendan Long <b.long@cablelabs.com> on 2013-10-17
Reviewed by Philippe Normand.

No new tests because this just fixes a build warning.

* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webKitWebAudioSrcLoop): Add another %s for the second part of the pad name.

Canonical link: https://commits.webkit.org/141022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157560 268f45cc-cd09-0410-ab3c-d52691b4dbfc